<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/registerLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".fragment.LoginFragment">

	<TextView
		android:id="@+id/logo_register"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="50dp"
		android:text="@string/app_name"
		android:textColor="?colorPrimary"
		android:textSize="60sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<EditText
		android:id="@+id/etUsername"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:autofillHints="emailAddress"
		android:backgroundTint="?colorForeground"
		android:backgroundTintMode="src_atop"
		android:ems="8"
		android:hint="@string/username"
		android:inputType="textEmailAddress"
		android:textSize="24sp"
		app:layout_constraintBottom_toTopOf="@+id/etPassword"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/logo_register"
		app:layout_constraintVertical_chainStyle="packed" />

	<EditText
		android:id="@+id/etPassword"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:autofillHints="password"
		android:backgroundTint="?colorForeground"
		android:backgroundTintMode="src_atop"
		android:ems="8"
		android:hint="@string/password"
		android:inputType="textPassword"
		android:textSize="24sp"
		app:layout_constraintBottom_toTopOf="@+id/bLogin"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/etUsername" />

	<Button
		android:id="@+id/bLogin"
		style="@style/Widget.Material3.Button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:layout_marginBottom="10dp"
		android:insetTop="0dp"
		android:insetBottom="0dp"
		android:text="@string/login"
		android:textAppearance="@style/TextAppearance.AppCompat.Large"
		android:textColor="?colorForeground"
		android:textSize="24sp"
		app:layout_constraintBottom_toTopOf="@+id/tvAlreadyRegistered"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/etPassword" />

	<TextView
		android:id="@+id/tvAlreadyRegistered"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:alpha="0.7"
		android:text="@string/no_account"
		android:textColor="?colorForeground"
		android:textSize="16sp"
		app:layout_constraintBottom_toTopOf="@+id/bRegister"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/bLogin" />

	<Button
		android:id="@+id/bRegister"
		style="@style/Widget.Material3.Button.TextButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/register_ul"
		android:textSize="24sp"
		tools:layout_editor_absoluteX="161dp"
		tools:layout_editor_absoluteY="542dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvAlreadyRegistered" />
</androidx.constraintlayout.widget.ConstraintLayout>